@@ -1,8 +1,8 @@
 # --
 # Kernel/System/Auth/LDAP.pm - provides the ldap authentication
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: LDAP.pm,v 1.55.2.1 2009/09/22 14:53:24 mb Exp $
+# $Id: LDAP.pm,v 1.55.2.2 2010/01/05 16:10:49 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -16,7 +16,7 @@ use warnings;
 use Net::LDAP;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.55.2.1 $) [1];
+$VERSION = qw($Revision: 1.55.2.2 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -350,39 +350,37 @@ sub Auth {
 sub _ConvertTo {
     my ( $Self, $Text, $Charset ) = @_;
 
+    return if !defined $Text;
+
     if ( !$Charset || !$Self->{DestCharset} ) {
         $Self->{EncodeObject}->Encode( \$Text );
         return $Text;
     }
-    if ( !defined($Text) ) {
-        return;
-    }
-    else {
-        return $Self->{EncodeObject}->Convert(
-            Text => $Text,
-            From => $Self->{DestCharset},
-            To   => $Charset,
-        );
-    }
+
+    # convert from input charset ($Charset) to directory charset ($Self->{DestCharset})
+    return $Self->{EncodeObject}->Convert(
+        Text => $Text,
+        From => $Charset,
+        To   => $Self->{DestCharset},
+    );
 }
 
 sub _ConvertFrom {
     my ( $Self, $Text, $Charset ) = @_;
 
+    return if !defined $Text;
+
     if ( !$Charset || !$Self->{DestCharset} ) {
         $Self->{EncodeObject}->Encode( \$Text );
         return $Text;
     }
-    if ( !defined($Text) ) {
-        return;
-    }
-    else {
-        return $Self->{EncodeObject}->Convert(
-            Text => $Text,
-            From => $Self->{DestCharset},
-            To   => $Charset,
-        );
-    }
+
+    # convert from directory charset ($Self->{DestCharset}) to input charset ($Charset)
+    return $Self->{EncodeObject}->Convert(
+        Text => $Text,
+        From => $Self->{DestCharset},
+        To   => $Charset,
+    );
 }
 
 1;
