@@ -1,8 +1,8 @@
 # --
 # Kernel/System/Auth/Sync/LDAP.pm - provides the ldap sync
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: LDAP.pm,v 1.11 2011/08/12 09:06:16 mg Exp $
+# $Id: LDAP.pm,v 1.5.2.1 2010/01/05 16:10:49 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -13,11 +13,10 @@ package Kernel::System::Auth::Sync::LDAP;
 
 use strict;
 use warnings;
-
 use Net::LDAP;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.11 $) [1];
+$VERSION = qw($Revision: 1.5.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -110,7 +109,7 @@ sub Sync {
             return;
         }
     }
-    $Param{User} = $Self->_ConvertTo( $Param{User}, 'utf-8' );
+    $Param{User} = $Self->_ConvertTo( $Param{User}, $Self->{ConfigObject}->Get('DefaultCharset') );
 
     my $RemoteAddr = $ENV{REMOTE_ADDR} || 'Got no REMOTE_ADDR env!';
 
@@ -233,7 +232,7 @@ sub Sync {
                 # e. g. set utf-8 flag
                 $SyncUser{$Key} = $Self->_ConvertFrom(
                     $SyncUser{$Key},
-                    'utf-8',
+                    $Self->{ConfigObject}->Get('DefaultCharset'),
                 );
             }
             if ( $Entry->get_value('userPassword') ) {
@@ -242,7 +241,7 @@ sub Sync {
                 # e. g. set utf-8 flag
                 $SyncUser{Pw} = $Self->_ConvertFrom(
                     $SyncUser{Pw},
-                    'utf-8',
+                    $Self->{ConfigObject}->Get('DefaultCharset')
                 );
             }
         }
@@ -343,7 +342,7 @@ sub Sync {
                 Message  => "User: '$Param{User}' sync ldap groups $GroupDN to groups!",
             );
 
-            # search if we are allowed to
+            # search if we're allowed to
             my $Filter = '';
             if ( $Self->{UserAttr} eq 'DN' ) {
                 $Filter = "($Self->{AccessAttr}=$UserDNQuote)";
@@ -478,11 +477,11 @@ sub Sync {
             }
             else {
 
-                # sync roles permissions
+                # sync groups permissions
                 my %SRoles = %{ $UserSyncRolesDefinition->{$GroupDN} };
                 for my $SRole ( sort keys %SRoles ) {
 
-                    # get role id
+                    # get group id
                     my $RoleID = '';
                     my %Roles  = $Self->{GroupObject}->RoleList();
                     for my $RID ( keys %Roles ) {
@@ -683,7 +682,6 @@ sub Sync {
 
     # take down session
     $LDAP->unbind;
-
     return $Param{User};
 }
 
@@ -693,7 +691,7 @@ sub _ConvertTo {
     return if !defined $Text;
 
     if ( !$Charset || !$Self->{DestCharset} ) {
-        $Self->{EncodeObject}->EncodeInput( \$Text );
+        $Self->{EncodeObject}->Encode( \$Text );
         return $Text;
     }
 
@@ -711,7 +709,7 @@ sub _ConvertFrom {
     return if !defined $Text;
 
     if ( !$Charset || !$Self->{DestCharset} ) {
-        $Self->{EncodeObject}->EncodeInput( \$Text );
+        $Self->{EncodeObject}->Encode( \$Text );
         return $Text;
     }
 
