@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.87 2010/01/05 08:44:55 mb Exp $
+# $Id: CHANGES,v 1.993.2.88 2010/01/05 16:10:49 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2010/01/05) Fixed bug#4718 - LDAP auth not possible with OTRS in iso-8859-1
+    and utf-8 ldap directory.
  - (2010/01/05) Fixed bug#4708 - Added ArticleID to output of
     bin/otrs.getTicketThread.
  - (2010/01/04) Fixed bug#4704 - Package Manager: upload install fails with
